# AI_AGENT_COORDINATOR

./: .env-example  .gcloudignore  .gitignore  Makefile  README.md  pyproject.toml
app/: agent.py  callbacks.py  coordinator_prompt.py  evalset5eb406.evalset.json  prompt.py  tools.py
app/SUB_AGENTS/LinkedIN_Agent/: __init__.py  agent.py  prompt.py
app/SUB_AGENTS/LinkedIN_Agent/SUB_AGENTS/LINKEDINOPTIMIZER/: __init__.py  agent.py  prompt.py
app/SUB_AGENTS/LinkedIN_Agent/SUB_AGENTS/LINKEDINWRITER/: prompt.py
app/SUB_AGENTS/PythonAgent/: __init__.py  agent.py  prompt.py
app/SUB_AGENTS/Resume_Agent/: __init__.py  agent.py  prompt.py
app/SUB_AGENTS/data_science/: __init__.py  agent.py  tools.py
app/SUB_AGENTS/data_science/sub_agents/: __init__.py
app/SUB_AGENTS/data_science/sub_agents/analytics/: agent.py
app/SUB_AGENTS/data_science/sub_agents/bigquery/: agent.py  tools.py
app/SUB_AGENTS/data_science/sub_agents/bigquery/chase_sql/: llm_utils.py
app/SUB_AGENTS/data_science/sub_agents/bigquery/chase_sql/sql_postprocessor/: sql_translator.py
app/SUB_AGENTS/data_science/sub_agents/bqml/: agent.py
app/SUB_AGENTS/file_handler_agent/: __init__.py  agent.py  prompt.py  tools.py
app/utils/: utils.py
data/: test_frog
